<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ele434_team20_2026</name>
  <version>0.0.0</version>
  
  <description>TODO: Package description</description>
  
  <maintainer email="your.name.1@sheffield.ac.uk">Name 1</maintainer>
  <maintainer email="your.name.2@sheffield.ac.uk">Name 2</maintainer>

  <license>TODO: License declaration</license>

  <exec_depend>rclpy</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
